# omem

./: CMakeLists.txt  LICENSE  README.md
include/: omem.hpp
src/: omem.cpp
tests/: omem_test.cpp
